--- a/app/src/main/res/drawable/degradado5.xml
+++ b/app/src/main/res/drawable/degradado5.xml
@@ -3,10 +3,12 @@
     <!-- Creamos el degradado añadiendo cada
              color hexagesimal dondo orresponda
              también se puede añadir un ángulo -->
-    <gradient android:startColor="#24170E"
+    <gradient android:startColor="#35281F"
         android:centerColor="#35281F"
-        android:endColor="#24170E"
+        android:endColor="#35281F"
         android:angle="-90" />
     <corners android:radius="0dp" />
-
+    <stroke
+        android:width="1dp"
+        android:color="#F8E451" />
 </shape>
