--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
                 android:layout_height="wrap_content"
                 android:text="Nombre de Invocador"
                 android:id="@+id/textView"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:textSize="25dp"
                 android:textColor="#CFBA6B"
                 android:layout_gravity="center_horizontal"
@@ -34,7 +34,7 @@
                 android:textColor="#BA964F"
                 android:background="@drawable/degradado3"
                 android:textSize="25sp"
-                android:layout_margin="5dp"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
@@ -47,7 +47,7 @@
                 android:text="Buscar"
                 android:id="@+id/button"
                 android:onClick="enviar"
-                android:background="@drawable/degradado2"
+                android:background="@drawable/selector_boton1"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:typeface="serif"
