--- a/app/src/main/res/drawable/degradado3.xml
+++ b/app/src/main/res/drawable/degradado3.xml
@@ -5,7 +5,7 @@
              también se puede añadir un ángulo -->
     <gradient android:startColor="#205D60"
         android:centerColor="#124E52"
-        android:endColor="#13393A"
+        android:endColor="#225e61"
         android:angle="-90" />
     <corners android:radius="4dp" />
 </shape>
