--- a/app/src/main/res/drawable/degradado5.xml
+++ b/app/src/main/res/drawable/degradado5.xml
@@ -10,5 +10,5 @@
     <corners android:radius="0dp" />
     <stroke
         android:width="1dp"
-        android:color="#F8E451" />
+        android:color="#9c742e" />
 </shape>
