--- a/app/src/main/res/layout/activity_perfil_invocador.xml
+++ b/app/src/main/res/layout/activity_perfil_invocador.xml
@@ -1,15 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.nabu.perylol.perylol_movil.perfilInvocador">
+    android:layout_height="match_parent"
+    tools:context="com.example.nabu.perylol.perylol_movil.perfilInvocador"
+    android:background="@drawable/degradado1">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scrollView" >
+        android:id="@+id/scrollView"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -17,43 +18,59 @@
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/nombre_invocador"
-                android:gravity="center">
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp">
 
-                <TextView android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/perfil_nombre"
-                    android:text="Nombre"
-                    android:textSize="30dp"
-                    android:textStyle="bold"
-                    android:typeface="monospace" />
-
-                <TextView
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="ID"
-                    android:id="@+id/id_invocador" />
+                    android:id="@+id/icono_invocador"
+                    android:layout_marginRight="5dp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Lv"
-                    android:id="@+id/invocador_level" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/perfil_nombre"
+                        android:text="Nombre"
+                        android:textSize="30sp"
+                        android:typeface="normal"
+                        android:textColor="#CFBA6B"
+                        android:layout_gravity="center_horizontal" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/divicion"
+                        android:layout_gravity="center_horizontal" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Lv"
+                        android:id="@+id/invocador_level"
+                        android:textColor="#BA964F"
+                        android:textSize="20sp"
+                        android:layout_gravity="center_horizontal" />
+
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/divicion" />
-            </LinearLayout>
+                android:layout_height="2dp"
+                android:background="@drawable/degradado5"
+                android:layout_marginBottom="5dp"></LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -79,17 +96,30 @@
                 android:id="@+id/opciones">
 
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Emparejamiento"
-                    android:id="@+id/emparejamiento" />
+                    android:id="@+id/emparejamiento"
+                    android:background="@drawable/selector_boton1"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp"
+                    android:textColor="@color/blanco"
+                    android:textSize="@dimen/tamano_letraPF"
+                    android:padding="@dimen/pading_botones_PI"
+                    android:typeface="serif" />
 
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Historial"
                     android:id="@+id/historial"
-                    android:onClick="historial" />
+                    android:onClick="historial"
+                    android:background="@drawable/selector_boton1"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/blanco"
+                    android:textSize="@dimen/tamano_letraPF"
+                    android:padding="@dimen/pading_botones_PI"
+                    android:typeface="serif" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
