--- a/app/src/main/res/layout/partida.xml
+++ b/app/src/main/res/layout/partida.xml
@@ -10,7 +10,8 @@
         android:layout_height="fill_parent"
         android:padding="5dp"
         android:background="@drawable/degradado1"
-        android:layout_margin="7dp">
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -31,8 +32,8 @@
                     android:layout_height="fill_parent">
 
                     <ImageView
-                        android:layout_width="85dp"
-                        android:layout_height="85dp"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
                         android:id="@+id/historial_campeonImg"
                         android:layout_margin="3dp" />
 
@@ -45,8 +46,8 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:id="@+id/h_spells1"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginTop="3dp" />
+                            android:layout_marginBottom="4dp"
+                            android:layout_marginTop="6dp" />
 
                         <ImageView
                             android:layout_width="40dp"
@@ -63,23 +64,25 @@
                 android:layout_height="fill_parent"
                 android:gravity="center|top"
                 android:id="@+id/ll_resultado_historial"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/marco"
+                android:layout_marginLeft="2dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Victoria"
                     android:id="@+id/historial_resultado"
-                    android:textSize="40sp"
-                    android:typeface="serif" />
+                    android:textSize="27sp"
+                    android:typeface="serif"
+                    android:layout_marginTop="16dp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:padding="3dp"
                     android:layout_gravity="center_horizontal"
-                    android:gravity="center_horizontal">
+                    android:gravity="center_horizontal|top">
 
                     <LinearLayout
                         android:orientation="horizontal"
@@ -93,7 +96,7 @@
                             android:layout_height="wrap_content"
                             android:text="K"
                             android:id="@+id/textView2"
-                            android:textSize="20sp"
+                            android:textSize="15sp"
                             android:layout_marginRight="3dp"
                             android:textColor="#F7D340" />
 
@@ -102,7 +105,7 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:id="@+id/historial_kill"
-                            android:textSize="20sp"
+                            android:textSize="15sp"
                             android:textColor="#Ffffff" />
                     </LinearLayout>
 
@@ -118,7 +121,7 @@
                             android:layout_height="wrap_content"
                             android:text="D"
                             android:id="@+id/textView4"
-                            android:textSize="20sp"
+                            android:textSize="15sp"
                             android:layout_marginRight="3dp"
                             android:textColor="#F7D340" />
 
@@ -127,7 +130,7 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:id="@+id/historial_dead"
-                            android:textSize="20sp"
+                            android:textSize="15sp"
                             android:textColor="#Ffffff" />
                     </LinearLayout>
 
@@ -142,7 +145,7 @@
                             android:layout_height="wrap_content"
                             android:text="A"
                             android:id="@+id/textView7"
-                            android:textSize="20sp"
+                            android:textSize="15sp"
                             android:layout_marginRight="3dp"
                             android:textColor="#F7D340" />
 
@@ -151,7 +154,7 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:id="@+id/historial_assists"
-                            android:textSize="20sp"
+                            android:textSize="15sp"
                             android:textColor="#Ffffff" />
                     </LinearLayout>
 
@@ -165,13 +168,14 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/centrado">
+            style="@style/centrado"
+            android:gravity="center_horizontal">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="left">
+                android:gravity="center_horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -199,7 +203,7 @@
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="fill_horizontal|left"
+                android:gravity="center_horizontal"
                 android:layout_marginBottom="5dp">
 
                 <ImageView
